<resources>
    <string name="app_name">Cinemax</string>
    <string name="header_onboarding_first">The biggest international and local film streaming
</string>
    <string name="header_onboarding_second">Offers ad-free viewing of high quality
</string>
    <string name="header_onboarding_third">Our service brings together your favorite series
</string>
    <string name="body_onboarding_first">No matter your mood or preference, we\'ve got something for everyone. Browse by genre, country, or popularity to find your next binge-worthy film
</string>
    <string name="body_onboarding_second">From the smallest details to the grandest set pieces, every frame is optimized for your viewing pleasure. Enjoy every moment to the fullest with Cinemax
</string>
    <string name="body_onboarding_third">With multiple seasons and episodes available, you\'ll never have to wait to see what happens next. Follow your favorite characters on their epic journeys
</string>
    <string name="cinemax">CINEMAX</string>
    <string name="enter_your_registered_n_phone_number_to_sign_up">Enter your registered \n Phone number to sign up</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_already_have_an_account">I already have an account? </string>
    <string name="login">Login</string>
    <string name="or_sign_up_with"> Or Sign Up With </string>
    <string name="welcome_back_please_enter_your_details">Welcome back! Please enter \n your details.</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="the_latest_movies_and_series_are_here">The latest movies and series\n are here</string>
    <string name="full_name">Full Name</string>
    <string name="i_agree_to_the_terms_and_services_and_privacy_policy">I agree to the Terms and Services and Privacy Policy</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="recover_your_account_password">Recover your account password</string>
    <string name="next">Next</string>
    <string name="we_have_just_sent_you_4_digit_code_via_your_email_example_gmail_com">We have just sent you 4 digit code via your\n email.</string>
    <string name="didn_t_receive_code">Didn\'t receive code? </string>
    <string name="resend">Resend</string>
    <string name="verifying_your_account">Verifying Your Account</string>
    <string name="create_new_password">Create New Password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="reset">Reset</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="facebook_app_id" translatable="false">946781372990618</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb946781372990618</string>
    <string name="facebook_client_token" translatable="false">67167c5be1ef1ae97ac55c4fd4b1e9d2</string>

    <string name="web_client_id" translatable="false">112589014002-dligpfcq8bfubnd5osalk74scpoa95qp.apps.googleusercontent.com</string>
    <string name="hello">Hello</string>
    <string name="let_s_stream_your_favorite_movie">Let’s stream your favorite movie</string>
    <string name="categories">Categories</string>
    <string name="most_popular">Most Popular</string>
    <string name="see_all">See All</string>
    <string name="now_playing">Now Playing</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="movie_related">Results</string>
    <string name="we_are_sorry_we_can_not_find_the_movie">We Are Sorry, We Can\n Not Find The Movie :(</string>
    <string name="find_your_movie_by_type_title_categories_years_etc">Find your movie by typing its title</string>
    <string name="actors">Actors</string>
    <string name="wishlist">Wishlist</string>
    <string name="trailer">Trailer</string>
    <string name="overview">Overview</string>
    <string name="cast_and_crew">Cast and Crew</string>
    <string name="episode">Episode</string>
    <string name="profile">Profile</string>

    <string name="member">Member</string>
    <string name="changePassword">Change Password</string>
    <string name="notification">Notification</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="clearCache">Clear Cache</string>
    <string name="legalPolicy">Legal and Policies</string>
    <string name="helpFeedback">Help&amp;Feedback</string>
    <string name="aboutUs">About Us</string>
    <string name="logOut">Log Out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="noneditablepassword" translatable="false">................</string>
    <string name="save_changes">Save Changes</string>
    <string name="terms">Terms</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget ornare quam vel facilisis feugiat amet sagittis arcu, tortor. Sapien, consequat ultrices morbi orci semper sit nulla. Leo auctor ut etiam est, amet aliquet ut vivamus. Odio vulputate est id tincidunt fames. \n Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget ornare quam vel facilisis feugiat amet sagittis arcu, tortor. Sapien, consequat ultrices morbi orci semper sit nulla. Leo auctor ut etiam est, amet aliquet ut vivamus. Odio vulputate est id tincidunt fames.</string>
    <string name="changes_to_the_service_and_or_terms">Changes to the Service and/or Terms:</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="languages">Languages</string>
    <string name="english">English</string>
    <string name="turkish">Turkish</string>
    <string name="countries">Countries</string>
    <string name="usa">USA</string>
    <string name="t_rkiye">Türkiye</string>
    <string name="search">Search</string>
    <string name="there_is_no_movie_in_your_wishlist_yet">There Is No Movie In Your Wishlist Yet!</string>
    <string name="the_movies_you_like_on_the_detail_screen_will_be_added_here">The movies you like on the detail\n screen will be added here</string>
    <string name="top_rated">Top Rated</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="ullamcorper" translatable="false">Ullamcorper imperdiet urna id non sed est sem. Rhoncus amet, enim purus gravida donec aliquet.</string>
    <string name="cancel">Cancel</string>
    <string name="fullname_email_password_can_not_be_empty">Full Name, Email or password cannot be empty!</string>
    <string name="email_password_can_not_be_empty">Email or password cannot be empty!</string>
    <string name="need_to_accept">You need to accept the terms!</string>
    <string name="registration_successful">Registration is successful</string>
    <string name="press_back_again">Please press back again to exit</string>
    <string name="cleared_cache">Cache cleared</string>

    <string name="this_option_restart">This option will restart the app.Do you agree?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="release_date">Release Date:</string>
    <string name="all">All</string>
    <string name="movie">Movie</string>
    <string name="series">Series</string>
    <string name="hi">Hi</string>
</resources>