<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".presentation.authentication.entry.EntryFragment">

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="133dp"
        android:src="@drawable/logo_wo_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/cinemax"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/enter_your_registered_n_phone_number_to_sign_up"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_logo"
        app:lineHeight="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButton"
        android:layout_width="267dp"
        android:layout_height="47dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/blue_accent"
        android:fontFamily="@font/montserrat"
        android:text="@string/sign_up"
        android:textSize="13sp"
        app:cornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textViewAlreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/i_already_have_an_account"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@id/textViewLoginEntry"
        app:layout_constraintStart_toStartOf="@id/signUpButton"
        app:layout_constraintTop_toBottomOf="@id/signUpButton"
        app:lineHeight="14sp" />

    <TextView
        android:id="@+id/textViewLoginEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat"
        android:gravity="start"
        android:text="@string/login"
        android:textColor="@color/blue_accent"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@id/textViewAlreadyHaveAccount"
        app:layout_constraintTop_toBottomOf="@id/signUpButton"
        app:lineHeight="14sp" />

    <View
        android:id="@+id/divider"
        android:layout_width="52dp"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="@color/soft"
        app:layout_constraintEnd_toStartOf="@+id/orSignUpWith"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAlreadyHaveAccount" />

    <TextView
        android:id="@+id/orSignUpWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/or_sign_up_with"
        android:textColor="@color/grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/dividerSecond"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@id/textViewAlreadyHaveAccount"
        app:lineHeight="14sp" />

    <View
        android:id="@+id/dividerSecond"
        android:layout_width="52dp"
        android:layout_height="1dp"
        android:layout_marginTop="40dp"
        android:background="@color/soft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/orSignUpWith"
        app:layout_constraintTop_toBottomOf="@+id/textViewAlreadyHaveAccount" />

    <ImageView
        android:id="@+id/logoGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/logogoogle"
        app:layout_constraintEnd_toStartOf="@+id/logoFacebook"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/orSignUpWith" />

    <ImageView
        android:id="@+id/logoFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/logofacebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/logoGoogle"
        app:layout_constraintTop_toBottomOf="@id/orSignUpWith" />

</androidx.constraintlayout.widget.ConstraintLayout>