<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:backgroundTint="@color/dark"
    tools:context=".presentation.authentication.ResetPasswordFragment">

    <ImageView
        android:id="@+id/buttonBackResetScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_44sdp"
        android:src="@drawable/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textViewResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_44sdp"
        android:fontFamily="@font/montserrat"
        android:text="@string/reset_password"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonBackResetScreen" />

    <TextView
        android:id="@+id/textViewLatestMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:letterSpacing="0.01"
        android:text="@string/recover_your_account_password"
        android:textColor="@color/grey"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewResetPassword" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmailAddressResetScreen"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="@dimen/_253sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_58sdp"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
        app:boxCornerRadiusBottomStart="@dimen/_20sdp"
        app:boxCornerRadiusTopEnd="@dimen/_20sdp"
        app:boxCornerRadiusTopStart="@dimen/_20sdp"
        app:boxStrokeColor="@color/text_input_layout_stroke_color"
        app:boxStrokeWidth="1dp"
        app:expandedHintEnabled="false"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLatestMovies">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email"
            android:autofillHints="emailAddress"
            android:hint="@string/email_address"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNextResetPasswordScreen"
        android:layout_width="@dimen/_267sdp"
        android:layout_height="@dimen/_47sdp"
        android:layout_marginTop="@dimen/_33sdp"
        android:backgroundTint="@color/blue_accent"
        android:fontFamily="@font/montserrat"
        android:text="@string/next"
        android:textSize="@dimen/_13ssp"
        app:cornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmailAddressResetScreen" />

</androidx.constraintlayout.widget.ConstraintLayout>
